--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "minimist": "1.2.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
@@ -86,10 +86,13 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-site-nav": "^0.2.9",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
     "styled-components": "4.2.0"
   },
   "devDependencies": {
@@ -112,6 +115,7 @@
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-plugin-transform-semantic-ui-react-imports": "^1.4.1",
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
@@ -135,7 +139,7 @@
     "imports-loader": "0.8.0",
     "jest-cli": "24.7.1",
     "jest-dom": "3.1.3",
-    "jest-styled-components": "6.3.1",
+    "jest-styled-components": "^6.3.1",
     "lint-staged": "8.1.5",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
