--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "aws-amplify": "^1.1.36",
+    "aws-amplify-react": "^2.3.12",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
@@ -84,7 +86,7 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
-    "react-redux": "7.0.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "5.0.0",
     "react-site-nav": "^0.2.9",
     "redux": "4.0.1",
