part 2 debug aws, what time is it?

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm run prebuild
+        - npm ci
     build:
       commands:
         - npm run build
